improve wave animation

--- a/src/assets/css/_animations.scss
+++ b/src/assets/css/_animations.scss
@@ -1,13 +1,12 @@
 @keyframes wave {
-  0% {
-    transform: rotate3d(0, 10, -10, -30deg);
-    transition: transform .5s;
-    opacity: 0.7;
-  }
-
-  100% {
-    opacity: 1;
-  }
+    0% { transform: rotate( 0.0deg) }
+   10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+   20% { transform: rotate(-8.0deg) }
+   30% { transform: rotate(14.0deg) }
+   40% { transform: rotate(-4.0deg) }
+   50% { transform: rotate(10.0deg) }
+   60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+  100% { transform: rotate( 0.0deg) }
 }
 
 @keyframes springUp {
