--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -1,5 +1,5 @@
 <section class="intro" id="intro">
-    <h2>Hey there <span class="wave">👋🏾</span>,</h2>
+    <h2>Hey there <span class="wave">👋🏾</span></h2>
     <p>I am Adekunle, mostly called Kunle (Koon-lay).</p>
     <br />
     <p>
