--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -304,7 +304,9 @@ p {
 }
 
 .wave {
-  animation: wave 1s ease .5s infinite, opacity .5s ease 0s;
+  animation: wave 2.5s infinite;
+  transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
+  display: inline-block;
   display: inline-block;
 }
 
