fix typo and cleanup

--- a/src/components/workHistory.astro
+++ b/src/components/workHistory.astro
@@ -14,12 +14,10 @@
                 </a>, <span class="years">2021 - Current</span>
             </h4>
             <p>
-                <!-- Currently work in the Analysis Org - Reporting team; Helping to
-                create delightful charts that makes data insightful to our
-                customers.  -->
-                Creating insightful and delightful data tiles experience on the Analyze
-                Insights team. I contribute to the effort to simplify how users visualize
-                raw data using charts, tables, open text etc.
+                Creating insightful and delightful data tiles experience on the
+                Analyze Insights team. I contribute to the effort to simplify
+                how users visualize raw data using charts, tables, open text
+                etc.
             </p>
             <p>
                 Previously worked on the CRM team for the
@@ -46,8 +44,8 @@
                 >, <span class="years">2019 - 2021</span>
             </h4>
             <p>
-                I worked at firstly as a Contractor, before transitioning into
-                full-time role.
+                I worked as a Contractor, before transitioning into full-time
+                role.
             </p>
             <p>
                 Built a PWA for a logistics company in the Middle-Eastern region
@@ -87,7 +85,8 @@
                 I got excited about the mission and rolled my sleeves to join
                 the team at work. We released the first version of the new
                 application about 7 months later, for yakata sales (black
-                friday).
+                friday), this generated billions in revenue. The app is still
+                used in production today.
             </p>
             <p>
                 In this time, I got retained as a Software Engineer contributing
