add timeline style to work history

--- a/src/components/workHistory.astro
+++ b/src/components/workHistory.astro
@@ -1,122 +1,148 @@
 <section class="section" id="work-history">
-    <h3 class="heading">Work History</h3>
-    <div class="flex">
+    <h3 class="heading center">Work History</h3>
+    <ul class="flex">
         <!-- SurveyMonkey -->
-        <div class="flex-item">
-            <h4>
-                <a
-                    class="underline"
-                    href="https://surveymonkey.com/"
-                    rel="noopener"
-                    target="_blank"
-                    aria-label="surveymonkey"
-                    >SurveyMonkey
-                </a>, <span class="years">2021 - Current</span>
-            </h4>
-            <p>
-                Creating insightful and delightful data tiles experience on the
-                Analyze Insights team. I contribute to the effort to simplify
-                how users visualize raw data using charts, tables, open text
-                etc.
-            </p>
-            <p>
-                Previously worked on the CRM team for the
-                <a
-                    class="underline"
-                    href="https://www.getfeedback.com/"
-                    rel="noopener"
-                    target="_blank"
-                    aria-label="Getfeedback">GetFeedback</a
-                > platform; building out web experiences for the Automations and
-                Integrations Layer.
-            </p>
-        </div>
+        <li>
+            <div class="flex-item">
+                <h4>
+                    <a
+                        class="underline"
+                        href="https://surveymonkey.com/"
+                        rel="noopener"
+                        target="_blank"
+                        aria-label="surveymonkey"
+                        >SurveyMonkey
+                    </a>, <span class="years">2021 - Current</span>
+                </h4>
+                <p>
+                    Creating data intensive and delightful data tiles experience
+                    on the Analyze Insights team. I contribute to the effort to
+                    simplify how users visualize raw data using charts, tables,
+                    open text etc.
+                </p>
+                <p>
+                    Previously worked on the CRM team for the
+                    <a
+                        class="underline"
+                        href="https://www.getfeedback.com/"
+                        rel="noopener"
+                        target="_blank"
+                        aria-label="Getfeedback">GetFeedback</a
+                    > platform; building web experiences for the Automations and
+                    Integrations Layer.
+                </p>
+            </div>
+        </li>
 
         <!-- Deimos Cloud -->
-        <div class="flex-item">
-            <h4>
-                <a
-                    class="underline"
-                    href="https://deimos.io/"
-                    rel="noopener"
-                    target="_blank"
-                    aria-label="deimos">Deimos Cloud</a
-                >, <span class="years">2019 - 2021</span>
-            </h4>
-            <p>
-                I worked as a Contractor, before transitioning into full-time
-                role.
-            </p>
-            <p>
-                Built a PWA for a logistics company in the Middle-Eastern region
-                that serves over a million users. This required building out a
-                Web app and a GraphQL server that served as the BFF (Backend for
-                Frontend) layer for aggregating data from backend services.
-            </p>
-            <h5>Proud Deimos Alumnus; To the moon 🚀</h5>
-        </div>
+        <li>
+            <div class="flex-item">
+                <h4>
+                    <a
+                        class="underline"
+                        href="https://deimos.io/"
+                        rel="noopener"
+                        target="_blank"
+                        aria-label="deimos">Deimos Cloud</a
+                    >, <span class="years">2019 - 2021</span>
+                </h4>
+                <p>
+                    I worked as a Contractor, before transitioning into
+                    full-time role.
+                </p>
+                <p>
+                    Built a PWA for a logistics company in the Middle-Eastern
+                    region that serves over a million users. This required
+                    building out a Web app and a GraphQL server that served as
+                    the BFF (Backend for Frontend) layer for aggregating data
+                    from backend services.
+                </p>
+                <h5>Proud Deimos Alumnus; To the moon 🚀</h5>
+            </div>
+        </li>
 
         <!-- Konga -->
-        <div class="flex-item">
-            <h4>
-                <a
-                    class="underline"
-                    href="https://www.konga.com/"
-                    rel="noopener"
-                    target="_blank"
-                    aria-label="Konga">Konga Online Shopping Ltd</a
-                >, <span class="years">2018 - 2019</span>
-            </h4>
-            <p>
-                Joined Konga as an Engineering Cadet, straight out of
-                university. I was sold the mission to rebuild the customer
-                facing web app
-                <a
-                    class="underline"
-                    href="https://www.konga.com/"
-                    rel="noopener"
-                    target="_blank"
-                    aria-label="Konga">Konga</a
-                >, with a focus on performance, responsiveness, accessibility,
-                reduced cost of operation, and of course a better developer
-                experience.
-            </p>
-            <p>
-                I got excited about the mission and rolled my sleeves to join
-                the team at work. We released the first version of the new
-                application about 7 months later, for yakata sales (black
-                friday), this generated billions in revenue. The app is still
-                used in production today.
-            </p>
-            <p>
-                In this time, I got retained as a Software Engineer contributing
-                to the engineering goals.
-            </p>
-        </div>
+        <li>
+            <div class="flex-item">
+                <h4>
+                    <a
+                        class="underline"
+                        href="https://www.konga.com/"
+                        rel="noopener"
+                        target="_blank"
+                        aria-label="Konga">Konga Online Shopping Ltd</a
+                    >, <span class="years">2018 - 2019</span>
+                </h4>
+                <p>
+                    Joined Konga as an Engineering Cadet, straight out of
+                    university. I was sold the mission to rebuild the customer
+                    facing web app
+                    <a
+                        class="underline"
+                        href="https://www.konga.com/"
+                        rel="noopener"
+                        target="_blank"
+                        aria-label="Konga">Konga</a
+                    >, with a focus on performance, responsiveness,
+                    accessibility, reduced cost of operation, and of course a
+                    better developer experience.
+                </p>
+                <p>
+                    I got excited about the mission and rolled my sleeves to
+                    join the team at work. We released the first version of the
+                    new application about 7 months later, for yakata sales
+                    (black friday), this generated billions in revenue. The app
+                    is still used in production today.
+                </p>
+                <p>
+                    In this time, I got retained as a Software Engineer
+                    contributing to the engineering goals.
+                </p>
+            </div>
+        </li>
 
         <!-- HotelsNG -->
-        <div class="flex-item">
-            <h4>
-                <a
-                    class="underline"
-                    href="https://www.hotels.ng/"
-                    rel="noopener"
-                    target="_blank"
-                    aria-label="hotelsNG">Hotels NG</a
-                >, <span class="years">2016</span>
-            </h4>
-            <p>
-                Humble beginning as a candidate of the first HNG internship in
-                2016. This was a great experience that introduced me to the
-                world of professional work setting.
-            </p>
-            <p>
-                Finished as one of the few finalists with other awesome folks.
-            </p>
-            <p>
-                HNG was an eye opener and I'm a product of the internship who
-                has moved on to make a decent career, just like many others.
-            </p>
-        </div>
-    </div>
+        <li>
+            <div class="flex-item">
+                <h4>
+                    <a
+                        class="underline"
+                        href="https://www.hotels.ng/"
+                        rel="noopener"
+                        target="_blank"
+                        aria-label="hotelsNG">Hotels NG</a
+                    >, <span class="years">2016</span>
+                </h4>
+                <p>
+                    Humble beginning as a candidate of the first HNG internship
+                    in 2016. This was a great experience that introduced me to
+                    the world of professional work setting.
+                </p>
+                <p>
+                    Finished as one of the few finalists with other awesome
+                    folks.
+                </p>
+                <p>
+                    HNG was an eye opener and I'm a product of the internship
+                    who has moved on to make a decent career, just like many
+                    others.
+                </p>
+            </div>
+        </li>
+    </ul>
 </section>
+
+<style>
+    /* timeline style */
+    .flex {
+        position: relative;
+
+        li {
+            position: relative;
+
+            &:nth-child(even) > div {
+                float: right;
+            }
+        }
+    }
+</style>
