--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -106,7 +106,7 @@ p {
   &::after {
     content: '';
     display: inline-block;
-    width: 100px;
+    width: 30px;
     height: 5px;
     background-color: var(--primary);
   }
@@ -143,14 +143,14 @@ p {
   @include mobile {
     flex-direction: row;
     align-items: center;
-    height: 70px;
+    height: 50px;
     left: 5%;
-    top: 10px;
+    top: 5px;
     width: 90%;
     padding-top: 0;
-    background-color: rgba(25, 21, 69, 0.1);
-    backdrop-filter: blur(3px);
-    border-radius: 8px;
+    background-color: rgba(25, 21, 69, 0.25);
+    backdrop-filter: blur(10px);
+    border-radius: 50px;
     margin: 0 auto;
   }
 
@@ -273,6 +273,63 @@ p {
 
     @include tablet {
       width: 45%;
+    }
+  }
+
+  &::before {
+    @include tablet {
+      position: absolute;
+        left: 50%;
+        top: 0;
+        content: " ";
+        display: block;
+        width: 2px;
+        height: 100%;
+        margin-left: -1px;
+        background: rgb(213, 213, 213);
+        background: -moz-linear-gradient(
+            top,
+            rgba(213, 213, 213, 0) 0%,
+            rgb(213, 213, 213) 8%,
+            rgb(213, 213, 213) 92%,
+            rgba(213, 213, 213, 0) 100%
+        );
+        background: -webkit-gradient(
+            linear,
+            left top,
+            left bottom,
+            color-stop(0%, rgba(30, 87, 153, 1)),
+            color-stop(100%, rgba(125, 185, 232, 1))
+        );
+        background: -webkit-linear-gradient(
+            top,
+            rgba(213, 213, 213, 0) 0%,
+            rgb(213, 213, 213) 8%,
+            rgb(213, 213, 213) 92%,
+            rgba(213, 213, 213, 0) 100%
+        );
+        background: -o-linear-gradient(
+            top,
+            rgba(213, 213, 213, 0) 0%,
+            rgb(213, 213, 213) 8%,
+            rgb(213, 213, 213) 92%,
+            rgba(213, 213, 213, 0) 100%
+        );
+        background: -ms-linear-gradient(
+            top,
+            rgba(213, 213, 213, 0) 0%,
+            rgb(213, 213, 213) 8%,
+            rgb(213, 213, 213) 92%,
+            rgba(213, 213, 213, 0) 100%
+        );
+        background: linear-gradient(
+            to bottom,
+            rgba(213, 213, 213, 0) 0%,
+            rgb(213, 213, 213) 8%,
+            rgb(213, 213, 213) 92%,
+            rgba(213, 213, 213, 0) 100%
+        );
+        z-index: 5;
     }
   }
 }
