add circle to timeline

--- a/src/components/workHistory.astro
+++ b/src/components/workHistory.astro
@@ -132,13 +132,31 @@
     </ul>
 </section>
 
-<style>
+<style lang="scss">
+    @import "../assets/css/_utils.scss";
     /* timeline style */
     .flex {
         position: relative;
 
         li {
             position: relative;
+
+            &::before {
+                @include tablet {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: 50%;
+                    width: 12px;
+                    height: 12px;
+                    background-color: var(--primary);
+                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+                    border-radius: 50%;
+                    transform: translate(-50%, 100%);
+                    z-index: 999;
+                }
+            }
 
             &:nth-child(even) > div {
                 float: right;
