--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -284,7 +284,8 @@ p {
         content: " ";
         display: block;
         width: 2px;
-        height: 100%;
+        height: 105%;
+        transform: translate(0, -2.5%);
         margin-left: -1px;
         background: rgb(213, 213, 213);
         background: -moz-linear-gradient(
