chore: quick refactorings

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/header.astro";
 import Intro from "../components/intro.astro";
+import Tech from "../components/tech.astro";
 import WorkHistory from "../components/workHistory.astro";
 import PageLayout from "../layouts/PageLayout.astro";
 ---
@@ -9,6 +10,7 @@ import PageLayout from "../layouts/PageLayout.astro";
   <main class="container">
     <Header />
     <Intro />
+    <Tech />
     <WorkHistory />
   </main>
 </PageLayout>
