--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,6 +1,16 @@
 ---
 import "../assets/css/style.scss";
-import { Icon } from "astro-icon/components";
+import Nav from "../components/nav.astro";
+
+interface Props {
+  title?: string;
+  description?: string;
+}
+
+const {
+  title = "adexot's site",
+  description = "Software Engineer 👨🏾‍💻, specializing in Frontend Development.",
+} = Astro.props;
 ---
 
 <!doctype html>
@@ -16,70 +26,24 @@ import { Icon } from "astro-icon/components";
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Software Engineer 👨🏾‍💻, specializing in Frontend Development."
-    />
+    <meta name="description" content={description} />
     <meta
       name="keywords"
       content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM"
     />
     <meta name="author" content="Adekunle Oseni" />
+    <meta name="generator" content={Astro.generator} />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>adexot's site</title>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet"> -->
-    <!-- <script defer src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script> -->
-    <!-- <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-ECS101WP4Z');
-  </script> -->
+    <title>{title}</title>
   </head>
 
   <body>
-    <nav class="nav">
-      <a class="emoji-icon" href="/">&lt;/&gt;</a>
-      <a class="emoji-icon" href="/til">TIL</a>
-      <ul class="social-icons">
-        <li>
-          <a
-            href="https://github.com/adexot"
-            rel="noopener"
-            target="_blank"
-            aria-label="Github"
-          >
-            <Icon name="github" height={20} width={20} />
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://twitter.com/oadex_09"
-            rel="noopener"
-            target="_blank"
-            aria-label="Twitter"
-          >
-            <Icon name="twitter" height={20} width={20} />
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/in/adekunle-oseni"
-            rel="noopener"
-            target="_blank"
-            aria-label="LinkedIn"
-          >
-            <Icon name="linkedin" height={20} width={20} />
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <Nav />
     <slot />
     <a
       href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle"
